# ModelFactory

./: LICENSE  ModelCreator_GUI.m  ModelCreator_noGUI.m  README
core/classes/: class_modelSegment.m
core/createModel/: fnc_createHumanModel.m  fnc_createObjectModel.m
core/io/: fnc_readCustomConstraints.m  fnc_readCustomConstraintsFile.m  fnc_readCustomLengthsFile.m  fnc_readCustomMarkerFile.m  fnc_readEnvironmentSetupFile.m  fnc_readHumanAnthropometry.m  fnc_readHumanModelDescriptionFile.m  fnc_readObjectModelDescriptionFile.m  fnc_writeCombinedLuaFile.m  fnc_writeLUAFile.m
core/plottingUtils/: fnc_plotting_plot3LineFromTo.m  fnc_plotting_plotJointAxis.m  fnc_plotting_plotModel.m  fnc_plotting_plotSegmentMesh.m  fnc_plotting_readMeshOBJ.m
core/scalingAlgorithms/: fnc_scalingAlgo_Jensen1986.m  fnc_scalingAlgo_deLeva1996_fusedTorso.m  fnc_scalingAlgo_deLeva1996_segmentedTrunk.m  fnc_scalingAlgo_deLeva1996_segmentedTrunk_sagittal.m
core/ui/: ui_close_gui.m  ui_createModel.m  ui_exportCombinedLuaFile.m  ui_exportLuaFile.m  ui_initialize.m  ui_readCustomConstraintsFile.m  ui_readCustomLengthsFile.m  ui_readCustomMarkerFile.m  ui_readEnvironmentSetup.m  ui_readHumanModelDescriptionFile.m  ui_reset.m  ui_setCurrentObject.m  ui_setScalingAlgorithm.m  ui_setupCustomOptions.m  (+7 more)
data/samples/use-case-walking/compute_id/: CMakeLists.txt
data/samples/use-case-walking/compute_id/src/: HumanModel.cc  HumanModel.h  HumanModelEnumMap.cc  HumanModelEnumMap.h  HumanModelEnums.h  HumanModelLuaTypes.h  compute_id.cc  csvtools.cc  csvtools.h
doc/: doc_ModelFactory.m
(+82 files in other folders)
