CMAKE_MINIMUM_REQUIRED ( VERSION 2.6 )

PROJECT( "Inverse Dynamics" CXX C )
SET(CUSTOM_RBDL_PATH "" CACHE PATH "Path to specific RBDL Installation")

LIST( APPEND CMAKE_MODULE_PATH
	${PROJECT_SOURCE_DIR}/CMake
	${PROJECT_SOURCE_DIR}/CMake/Modules)

FIND_PACKAGE (RBDL COMPONENTS LUAMODEL REQUIRED)
FIND_PACKAGE (Lua51 REQUIRED)
FIND_PACKAGE (Eigen3 3.0.0)
FIND_PACKAGE (TCLAP REQUIRED tclap>=1.2.0)

INCLUDE_DIRECTORIES ( ${EIGEN3_INCLUDE_DIR} ${RBDL_INCLUDE_DIR} ${LIBTCLAP_INCLUDE_DIRS} )

if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")   
endif()

add_executable( compute_id
	  src/compute_id.cc
	  src/HumanModelEnumMap.cc
	  src/HumanModel.cc
	  src/csvtools.cc
)

TARGET_LINK_LIBRARIES ( compute_id
	${RBDL_LIBRARY}
	${RBDL_LUAMODEL_LIBRARY}
	${LUA_LIBRARIES}
	${LIBTCALP_LIBRARY_DIRS}
	)

message("CUSTOM_RBDL_PATH         :" ${CUSTOM_RBDL_PATH})
message("RBDL_INCLUDE_DIR         :" ${RBDL_INCLUDE_DIR})
message("RBDL_LIBRARY             :" ${RBDL_LIBRARY})
message("RBDL_LUAMODEL_LIBRARY    :" ${RBDL_LUAMODEL_LIBRARY})
message("LUA_LIBRARIES            :" ${LUA_LIBRARIES})
message("EIGEN3_INCLUDE_DIR       :" ${EIGEN3_INCLUDE_DIR})
